--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import WavingHand from '@/assets/waving-hand.webp';
     <div class='space-y-2'>
       <h1 class='text-5xl font-extrabold'>
         My name is <span
-          class='from-base-content bg-gradient-to-r to-indigo-300 bg-clip-text font-extrabold text-transparent dark:to-indigo-500'
+          class='from-base-content to-highlight bg-gradient-to-r bg-clip-text font-extrabold text-transparent'
           >Aleksa</span
         >
       </h1>
