Fix: seo, blog tags, decap cms blog tags

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -5,7 +5,7 @@ import Breadcrumb from '@/components/breadcrumb.astro';
 
 <Layout
   title='About'
-  description="Learn more about Aleksa, a junior React developer with a strong foundation in building user interfaces and front-end applications. Passionate about coding and dedicated to creating visually appealing and user-friendly experiences, Aleksa (or Alexa) is always looking to improve and expand their skills. Read more about Aleksa's background and experience on their about page."
+  description='Discover my journey as a web developer, from early programming experiences to professional web development. Computer Science graduate passionate about creating innovative digital solutions.'
 >
   <section class='container space-y-6'>
     <Breadcrumb />
