--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -19,7 +19,7 @@ const { page, allTags } = Astro.props;
 
 <BlogListLayout
   title='Blog'
-  description='Personal blog where I write about personal experiences, web development, and more.'
+  description='Explore articles, guides, and notes about things I learnt while building stuff.'
   {page}
   {allTags}
 />
