--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -7,7 +7,10 @@ import Avatar from '@/assets/Avatar.svg';
 import WinterAvatar from '@/assets/WinterAvatar.svg';
 ---
 
-<Layout title='Contact' description='Get in touch with me for project inquiries, collaborations, or just to say hi!'>
+<Layout
+  title='Contact'
+  description='Get in touch for collaboration opportunities, project inquiries, or discussions about web development and software engineering solutions.'
+>
   <section class='container space-y-6'>
     <Breadcrumb />
     <h1 class='text-base-content text-4xl font-extrabold tracking-tight lg:text-5xl'>Contact me</h1>
